# accelerack

./: .gitignore  .gitmodules  .travis.yml  GADT_challenge.hs  Makefile  README.md  Types.hs  accelerack_grammar.txt  info.rkt  makefile_top.inc  manual.scrbl  stack.yaml  types.h  types.rkt  validate.sh
acc_c/: .prevalidate.sh  Makefile  acc_cfile.c  acc_header.h  acc_types.h  rts.c
acc_hs/: .mainvalidate.sh  .prevalidate.sh  Capi.hs  DirectInterface.hs  ExInterface.hs  ExUtils.hs  InterpInterface.hs  Makefile  SxpInterface.hs  SxpParse.hs  SxpUtils.hs  rkt_hs_interface.hs  stack.yaml  validate.sh
acc_hs/acc-array/: AccArray.hs  acc-array.cabal
acc_hs/acc-sexp/: acc-sexp.cabal
acc_hs/acc-sexp/tests/: Main.hs
acc_hs/accelerack/: accelerack.cabal
acc_hs/accelerack/src/Accelerack/: Gen.hs  Interface.hs  Marshal.hs  Parse.hs
acc_hs/accelerack/src/Racket/: DirectInterface.hs  ExUtils.hs  InterpInterface.hs  SxpParse.hs
acc_hs/accelerack/tests/: Main.hs  test-arrays.rkt.test
acc_rkt/: .get_racket.sh  .install_racket.sh  .mainvalidate.sh  .prevalidate.sh  ArrayUtils.rkt  Makefile  acc_cfile.c  acc_header.h  acc_header.rkt  accelerack.rkt  allocate.rkt  ffi-test.rkt  info.rkt  tests.rkt  verify-accelerack.rkt
acc_rkt/accelerack/: acc_allocate.rkt  acc_arrayutils.rkt  acc_header.rkt  acc_parse.rkt  acc_syntax.rkt  main.rkt
acc_rkt/accelerack/private/: acc_allocate.rkt  acc_arrayutils.rkt  acc_global_utils.rkt  acc_grammar.rkt  acc_header.rkt  acc_parse.rkt  acc_racket_ops.rkt  acc_sexp.rkt  acc_syntax.rkt  acc_typecheck.rkt  acc_typecheck_syntax.rkt  accelerack-types.rkt  allocate.rkt  arrayutils.rkt  executor.rkt  front-end.rkt  global_utils.rkt  header.rkt  keywords.rkt  old-syntax.rkt  parse.rkt  prototype.rkt  racket_ops.rkt  syntax-capture.rkt  syntax.rkt  types.rkt  wrappers.rkt
acc_rkt/accelerack/private/passes/: front-end.rkt  normalize.rkt  strip.rkt  syntax-capture.rkt  typeCheckerDemo.rkt  typecheck.rkt  verify-acc.rkt
acc_rkt/accelerack/src/: acc_allocate.rkt  acc_arrayutils.rkt  acc_header.rkt  acc_parse.rkt  acc_racket_ops.rkt  acc_syntax.rkt
acc_rkt/accelerack/tests/: ffi-tests.rkt  syntax-tests.rkt  test-utils.rkt  tests.rkt
acc_rkt/accelerack/tests/internal/: ffi-tests.rkt  syntax-tests.rkt
acc_rkt/accelerack/tests/user-facing/: user-ifc-tests.rkt
acc_rkt/accelerack/tests/user-facing/standalone/: test1.rkt  test2.rkt
acc_rkt/tests/: ffi-test.rkt  ffi-tests.rkt  sexp-tests.rkt  syntax-tests.rkt  test-utils.rkt  tests.rkt  user-ifc-tests.rkt
acc_rkt/tests_disabled/: sexp-tests.rkt  test3_use.rkt
accelerack/: .mainvalidate.sh  .prevalidate.sh  acc-array.rkt  main.rkt  validate.sh
accelerack-sexp/: accelerack-sexp.cabal
accelerack-sexp/sexp-0.7/: sexp.cabal
accelerack-sexp/src/Accelerack/: .Parse.hs.swp  Gen.hs  Parse.hs  Run.hs
accelerack-sexp/tests/: Main.hs
accelerack/acc-array/: element.rkt  private.rkt
accelerack/acc-array/private/: arrayutils.rkt  delayed.rkt  manifest-array.rkt
accelerack/acc-array/private/manifest-array/: allocate.rkt  structs.rkt
accelerack/private/: allocate.rkt  arrayutils.rkt  executor.rkt  front-end.rkt  header.rkt  image-interop.rkt  keywords.rkt  parse.rkt  prim-redefinitions.rkt  prim-table.rkt  prototype.rkt  racket_ops.rkt  syntax-capture.rkt  syntax-table.rkt  syntax.rkt  types.rkt  utils.rkt  wrappers.rkt
accelerack/private/passes/: normalize.rkt  strip.rkt  typeCheckerDemo.rkt  typecheck.rkt  verify-acc.rkt
accelerack/private/paven_old/: global_utils.rkt  prototype.rkt
accelerack/tests/internal/: allocate-tests.rkt  ffi-tests.rkt  manifest-refs.rkt  syntax-tests.rkt  type-tests.rkt  type-tests2.rkt
accelerack/tests/old_prototype/: tests.rkt
accelerack/tests/stress/: array-alloc.rkt
accelerack/tests/user-facing/: array-refs.rkt  errors.rkt  fold.rkt  functions.rkt  images.rkt  literals.rkt  map.rkt  prims.rkt  user-ifc-tests.rkt  zipwith.rkt
accelerack/tests/user-facing/standalone/: image-filter.rkt  name-reuse.rkt  name-reuse2.rkt  test1.rkt  test2.rkt
accelerack/tests_disabled/: paven-prototype.rkt
accelerack_tests_disabled/: paven-prototype.rkt  test10_abstract_fold.rkt  test3_use.rkt  typeCheckerDemo.rkt
accelerate/: .mainvalidate.sh  .prevalidate.sh
accelerate/accelerack/private/: syntax.rkt
accelerate/accelerack/private/passes/: typecheck.rkt
brainstorm/: accelerack-demo  accelerack-demo.rkt  accelerack.rkt  accelerack2.rkt  dotp.rkt  lang_sketch01.rkt  notes  trial.rkt
c-api/: Example.hs  ffi-test.rkt
docs/: Makefile  accelerack_grammar.txt  compiler_grammars.txt  grammars.txt  manual.scrbl  summary-2015-05.txt  todo.txt
example_apps/: acc.hs  hello_world.rkt  mandelbrot.rkt  trial.rkt  verify-accelerack.rkt
examples/: Capi.hs  Capi_stub.h  EvalTest.hs  Makefile  acclib.c  test.rkt  verify-accelerack.rkt
future_examples/: step1.rkt  step2.rkt  step3.rkt
haskell/: Example.hi  Example.hs  Example.hsc  Example_stub.h  Makefile  example.hi  example.hs  ffi-test.rkt  wrapper  wrapper.c  wrapper2.c
haskell2/: Example.hs  Example_stub.h  Makefile  ffi-test.rkt  init.c  wrapper.c  wrapper2.c
haskell3/: Makefile  ffi-test.rkt  init.c  rts.c
lib/: acc-types.rkt  accelerack.rkt  tests.rkt  types-hi.rkt  types.rkt
new/accelerack-sexp/: accelerack-sexp.cabal  stack.yaml
new/accelerack-sexp/src/Accelerack/: Gen.hs  Parse.hs
new/c-api/: Makefile
new/example_apps/: accelerac.rkt  mandelbrot.rkt  parser.c
new/examples/: Example.hs  acc1.rkt  accelerack.rkt  allocate.rkt  ffi-test.rkt
old/brainstorm/: a.rkt  notes  notes2.txt
old/lib/: types-hi.rkt
old/rts/: Makefile
old/sharedlib/: EvalTest.hs  Example.hs  Makefile  rts.c
racket/glimmer-tutorial/: ffi-test.rkt  mylib1.c
racket/two-curses-examples/: ffi-test.rkt
sharedlib/: EvalTest.hs  Makefile  ffi-test.rkt  ffi-test2.rkt  rts.c
test/: acc-types-t.rkt  accelerack-t.rkt  types-hi-t.rkt  types-t.rkt
work/: Capi2.hs  Makefile  acc_header.rkt  accelerack.rkt  acclib.c  allocate.rkt  c_struct.rkt  ffi-test.rkt  mylib.c  unzip_tuple.rkt  verify-accelerack.rkt
(+1 files in other folders)
