name: acc-sexp
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: kylcarte@gmail.com
author: Kyle Carter

library
    exposed-modules:
        Accelerack.Run
        Accelerack.Gen
        Accelerack.Parse
    build-depends:
        base >=4.8 && <4.9,
        accelerate -any,
        bytestring -any,
        hint -any,
        sexp >=0.7,
        template-haskell -any,
        haskell-src-meta -any
    default-language: Haskell2010
    hs-source-dirs: src

test-suite test-acc-sexp
    type:	    exitcode-stdio-1.0
    main-is:        Main.hs
    hs-source-dirs: tests/ 
                    
    build-depends: acc-sexp
    build-depends: base >= 4.6 && < 4.9,
                   hint -any
--                   , containers >= 0.5
--                   , vector >=0.10
--                   , random
    build-depends: tasty, tasty-hunit, tasty-th, 
                   tasty-quickcheck > 0.2.4, QuickCheck,
                   HUnit, time, text
    ghc-options: -Wall
