name: accelerack
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: kylcarte@gmail.com
author: Kyle Carter

library
    exposed-modules:
        Accelerack.Interface
        Accelerack.Marshal
        -- Accelerack.Parse
        -- Accelerack.Run
        -- Accelerack.Gen
    build-depends:
        base >=4.8 && <4.9,
        accelerate -any,
        accelerate-io,
        bytestring -any,
        containers -any,
        hint -any,
        mtl -any,
        -- sexp >=0.7,
        template-haskell -any,
        haskell-src-meta -any
    default-language: Haskell2010
    -- ghc-options: -o libhsifc.so -shared -dynamic -fPIC -lHSrts-ghc7.10.2
    hs-source-dirs: src

test-suite test-accelerack
    type:	    exitcode-stdio-1.0
    main-is:        Main.hs
    hs-source-dirs: tests/

    build-depends: accelerack
    build-depends: base >= 4.6 && < 4.9,
                   hint -any,
                   containers -any,
                   template-haskell -any,
                   mtl -any
--                   , vector >=0.10
--                   , random
    build-depends: tasty, tasty-hunit, tasty-th,
                   tasty-quickcheck > 0.2.4, QuickCheck,
                   HUnit, time, text
    default-language: Haskell2010
    ghc-options: -Wall
