name: accelerack
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: kylcarte@gmail.com
author: Kyle Carter

library
    exposed-modules:
        Accelerack.Interface
        Accelerack.Marshal
        -- Accelerack.Parse
        -- Accelerack.Run
        -- Accelerack.Gen
    build-depends:
        base >=4.8 && <4.9,
        accelerate,
        accelerate-io,
        bytestring,
        containers,
        hint,
        mtl,
        -- sexp >=0.7,
        template-haskell,
        haskell-src-meta
    default-language: Haskell2010
    -- ghc-options: -o libhsifc.so -shared -dynamic -fPIC
    hs-source-dirs: src

executable libacc.so
    main-is:       Accelerack/Interface.hs
    other-modules: Accelerack.Marshal
    build-depends: accelerack
    build-depends: accelerate,
                   accelerate-io
    build-depends: base >= 4.6 && < 4.9,
                   hint,
                   containers,
                   template-haskell,
                   mtl
    ghc-options: -shared -dynamic -fPIC
    default-language: Haskell2010
    hs-source-dirs: src

test-suite test-accelerack
    type:	    exitcode-stdio-1.0
    main-is:        Main.hs
    hs-source-dirs: tests/

    build-depends: accelerack
    build-depends: base >= 4.6 && < 4.9,
                   hint,
                   containers,
                   template-haskell,
                   mtl
--                   , vector >=0.10
--                   , random
    build-depends: tasty, tasty-hunit, tasty-th,
                   tasty-quickcheck > 0.2.4, QuickCheck,
                   HUnit, time, text
    default-language: Haskell2010
    ghc-options: -Wall
