name: accelerack
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: kylcarte@gmail.com
author: Kyle Carter

library
    exposed-modules:
        Accelerack.Interface
        Accelerack.Marshal
        Racket.DirectInterface
        Racket.ExUtils
        -- Accelerack.Parse
        -- Accelerack.Run
        -- Accelerack.Gen
    build-depends:
        base >=4.8 && <4.9,
        accelerate,
        accelerate-io,
        bytestring,
        containers,
        hint,
        mtl,
        sexp >=0.7,
        template-haskell,
        haskell-src-meta
    default-language: Haskell2010
    hs-source-dirs: src

executable libacc-hs.so
    main-is:       Accelerack/Interface.hs
    other-modules: Accelerack.Marshal
    build-depends: accelerack
    build-depends: accelerate,
                   accelerate-io
    build-depends: base >= 4.6 && < 4.9,
                   hint,
                   containers,
                   template-haskell,
                   mtl
    -- This would look for it as a "C Library" which it doesn't have path to find:
    --extra-libraries: HSrts-ghc7.10.2
    ghc-options: -shared -dynamic -fPIC
    default-language: Haskell2010
    hs-source-dirs: src

executable librachs.so
    main-is:       Racket/DirectInterface.hs
    other-modules: Racket.ExUtils
    build-depends: accelerack
    build-depends: base >= 4.6 && < 4.9, mtl , accelerate, accelerate-io
    default-language: Haskell2010
    ghc-options: -shared -dynamic -fPIC
    hs-source-dirs: src

executable libsxp.so
    main-is:       Racket/InterpInterface.hs
    other-modules: Racket.ExUtils, Racket.SxpParse
    build-depends: accelerack
    build-depends: base >= 4.6 && < 4.9, mtl, accelerate, accelerate-io, bytestring,
                   split, hint, containers, template-haskell, MissingH, dlist,sexp, either-unwrap
    default-language: Haskell2010
    ghc-options: -shared -dynamic -fPIC
    -- extra-libraries: HSrts_debug-ghc7.10.2
    hs-source-dirs: src
    
test-suite test-accelerack
    type:	    exitcode-stdio-1.0
    main-is:        Main.hs
    hs-source-dirs: tests/

    build-depends: accelerack
    build-depends: base >= 4.6 && < 4.9,
                   hint,
                   containers,
                   template-haskell,
                   mtl
--                   , vector >=0.10
--                   , random
    build-depends: tasty, tasty-hunit, tasty-th,
                   tasty-quickcheck > 0.2.4, QuickCheck,
                   HUnit, time, text
    default-language: Haskell2010
    ghc-options: -Wall
